# typomania

./: CMakeLists.txt  Makefile  Makefile.win32  README.md  common.h  font.cc  font.h  game.cc  game.h  gl_texture.cc  gl_texture.h  gl_util.cc  gl_util.h  gl_vertex_array.cc  gl_vertex_array.h  gl_vertex_array_base.cc  gl_vertex_array_base.h  image.cc  image.h  in_game_state.cc  in_game_state.h  kana.cc  kana.h  kashi.cc  kashi.h  main.cc  ogg_player.cc  ogg_player.h  pattern.cc  song_menu_state.cc  song_menu_state.h  spectrum_bars.cc  spectrum_bars.h
cmake/: FindJsonCpp.cmake  FindOggVorbis.cmake
data/: CMakeLists.txt  fetchstreams.pl  find_glyphs.pl
data/lyrics/: aideshou.kashi  allegro.kashi  amenotihare.kashi  aozora.kashi  aquarion.kashi  bluef.kashi  castingdice.kashi  chihayafuru.kashi  colors.kashi  daia.kashi  eureka.kashi  eva.kashi  fmp.kashi  groovinmagic.kashi  hametunojunjou.kashi  kamina.kashi  katari.kashi  kimijanakya.kashi  koiji.kashi  konnanitikakude.kashi  lightcolors.kashi  lion.kashi  melissa.kashi  nandodemo.kashi  northerncross.kashi  readysteadygo.kashi  romeo.kashi  seikanhikou.kashi  shikinouta.kashi  shounenheart.kashi  sola.kashi  sugarrush.kashi  takeoff.kashi  thankyou.kashi  tori.kashi  triangle.kashi  youthful.kashi
data/shaders/: blur.frag  blur.prog  flat.frag  flat.prog  flat.vert  glyphfx.frag  glyphfx.prog  sprite.frag  sprite.prog  sprite.vert  transition.frag  transition.prog
dumpglyphs/: .syntastic_c_config  CMakeLists.txt  Makefile  dumpglyphs.c
scripts/: dumpglyphs.c  gen_fonts.pl  xml_to_kashi.pl
typomania/: .syntastic_cpp_config  CMakeLists.txt  TODO  common.h  fft.cc  fft.h  font.cc  font.h  game.cc  game.h  gl_check.h  gl_framebuffer.cc  gl_framebuffer.h  gl_program.cc  gl_program.h  gl_texture.cc  gl_texture.h  gl_vertex_array_base.cc  glyph_fx.cc  glyph_fx.h  image.cc  image.h  in_game_state.cc  in_game_state.h  kana.cc  kana.h  kashi.cc  kashi.h  main.cc  mat3.h  noncopyable.h  ogg_player.h  panic.cc  panic.h  pattern.cc  pattern.h  render.cc  render.h  resource_cache.h  resources.cc  (+12 more)
